--- a/hw03-JUnit-MyTests/pom.xml
+++ b/hw03-JUnit-MyTests/pom.xml
@@ -12,4 +12,32 @@
     <artifactId>hw03-JUnit-MyTests</artifactId>
     <name>hw03-JUnit-MyTests</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.nuramov</groupId>
+            <artifactId>hw02-DIYarrayList-Collection</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.7.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.0-M1</version>
+        </dependency>
+    </dependencies>
+
 </project>
