--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>hw03-JUnit-MyTests</module>
         <module>hw04-AutoLogging</module>
         <module>hw05-GC-Work-Monitoring</module>
+        <module>hw06-ATM-Emulator</module>
     </modules>
 
     <properties>
