Версия 1.0 (базовая версия)

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>hw05-GC-Work-Monitoring</module>
         <module>hw06-ATM-Emulator</module>
         <module>hw07-ATM-Department</module>
+        <module>hw08-JSON-Object-Writer</module>
     </modules>
 
     <properties>
