--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>hw06-ATM-Emulator</module>
         <module>hw07-ATM-Department</module>
         <module>hw08-JSON-Object-Writer</module>
+        <module>hw09-Jdbc-Template</module>
     </modules>
 
     <properties>
