--- a/hw09-Jdbc-Template/pom.xml
+++ b/hw09-Jdbc-Template/pom.xml
@@ -16,4 +16,13 @@
         <maven.compiler.target>12</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
