--- a/hw09-Jdbc-Template/pom.xml
+++ b/hw09-Jdbc-Template/pom.xml
@@ -23,6 +23,12 @@
             <version>1.4.200</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0-M1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
