--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>hw08-JSON-Object-Writer</module>
         <module>hw09-Jdbc-Template</module>
         <module>hw10-Hibernate-ORM</module>
+        <module>hw11-Cache-Engine</module>
     </modules>
 
     <properties>
