--- a/hw10-Hibernate-ORM/pom.xml
+++ b/hw10-Hibernate-ORM/pom.xml
@@ -41,6 +41,12 @@
             <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.nuramov</groupId>
+            <artifactId>hw11-Cache-Engine</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
