--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>hw09-Jdbc-Template</module>
         <module>hw10-Hibernate-ORM</module>
         <module>hw11-Cache-Engine</module>
+        <module>hw12-Web-Server</module>
     </modules>
 
     <properties>
