--- a/hw12-Web-Server/pom.xml
+++ b/hw12-Web-Server/pom.xml
@@ -11,4 +11,23 @@
 
     <artifactId>hw12-Web-Server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>11.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>11.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-security</artifactId>
+            <version>11.0.7</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
