--- a/hw12-Web-Server/pom.xml
+++ b/hw12-Web-Server/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
 
         <!-- Может есть что-то лучше... Кек!-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-jsp</artifactId>
             <version>9.2.30.v20200428</version>
@@ -38,15 +38,23 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
-        </dependency>
+        </dependency>-->
 
 
-        <!-- thymeleaf вроде без спринга -->
+        <!-- thymeleaf вроде без спринга. Не работает с jakarta.Servlet-->
         <!--<dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
             <version>3.0.15.RELEASE</version>
         </dependency>-->
+
+        <!-- Зависимость для freemarker-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
+
 
 
         <dependency>
